fix modal on mobile screen

--- a/css/main.css
+++ b/css/main.css
@@ -672,8 +672,6 @@ footer .footer-lower i:hover {
 
   .toast {
     position: fixed !important;
-    bottom: 7vh !important;
-    right: 20px !important;
   }
 
   .toast.show {
