--- a/css/styles/queries.sass
+++ b/css/styles/queries.sass
@@ -73,8 +73,9 @@
 
     .toast 
         position: fixed !important
-        bottom: 7vh !important
-        right: 20px !important
+        // top: 50vh !important
+        // bottom: 10vh !important
+        // right: 20px !important
 
     .toast.show
         left: 50%
